--- a/clock/index.html
+++ b/clock/index.html
@@ -10,8 +10,12 @@
     </div>
 </body>
 <style>
+    body {
+        margin: 0;
+    }
     .clock-container {
         display: flex;
+        flex-grow: 1;
         align-items: center;
         justify-content: center;
         font-size: 75px;
@@ -19,14 +23,14 @@
         margin: auto;
         color: white;
         background-color: rgb(80, 62, 46);
-        max-width: 300px;
-        height: 120px;
+        width: 100vw;
+        height: 100vh;
     }
 </style>
 <script>
     const date = new Date();
     function refresh() {
-        document.getElementById("time").innerHTML = date.getHours() + ":" + date.getMinutes();
+        document.getElementById("time").innerHTML = String(date.getHours()).padStart(2, "0") + ":" + String(date.getMinutes()).padStart(2, "0");
     }
     setInterval(refresh, 1000);
 </script>
